--- a/index.html
+++ b/index.html
@@ -10,17 +10,8 @@
   </head>
   <body>
     <header id="header">
-      <div class="wrap">
-        <div class="logo"><a href="#"></a></div>
-        <div class="gnb-wrap">
-          <ul id="gnb">
-            <li>민원·소통·참여</li>
-            <li>정보공개</li>
-            <li>대구소개</li>
-            <li>분야별정보</li>
-          </ul>
-        </div>
-        <div class="gnb-hover">
+      <div class="gnb-hover">
+        <div class="wrap">
           <div class="top-banner">
             <ul>
               <li><a href="#">민원·소통·참여</a></li>
@@ -31,80 +22,91 @@
           </div>
           <div class="content">
             <ul>
-              <li>민원안내</li>
-              <li>두드리소(민원/제안)</li>
-              <li>사이버추모관</li>
-              <li>안전신문고</li>
-              <li>대구시민원탁회의</li>
-              <li>공익제보</li>
-              <li>공공재정 부정청구 신고</li>
-              <li>공직비리 익명신고</li>
-              <li>복지 및 인권옴부즈만</li>
-              <li>행정서비스 헌장</li>
-              <li>대구시민헌장</li>
-              <li>행복민원배심원제</li>
-              <li>시민 참여</li>
-              <li>지방분권</li>
-              <li>정책토론</li>
+              <li><a href="#">민원안내</a></li>
+              <li><a href="#">두드리소(민원/제안)</a></li>
+              <li><a href="#">사이버추모관</a></li>
+              <li><a href="#" class="href-icon">안전신문고</a></li>
+              <li><a href="#">대구시민원탁회의</a></li>
+              <li><a href="#">공익제보</a></li>
+              <li><a href="#">공공재정 부정청구 신고</a></li>
+              <li><a href="#">공직비리 익명신고</a></li>
+              <li><a href="#">복지 및 인권옴부즈만</a></li>
+              <li><a href="#">행정서비스 헌장</a></li>
+              <li><a href="#">대구시민헌장</a></li>
+              <li><a href="#">행복민원배심원제</a></li>
+              <li><a href="#">시민 참여</a></li>
+              <li><a href="#">지방분권</a></li>
+              <li><a href="#">정책토론</a></li>
             </ul>
             <ul>
-              <li>행정정보공개</li>
-              <li>정책실명제</li>
-              <li>알림정보</li>
-              <li>통합자료실</li>
-              <li>공공저작물</li>
-              <li>공공데이터개방</li>
-              <li>계약정보</li>
-              <li>감사정보</li>
-              <li>통계정보</li>
+              <li><a href="#">행정정보공개</a></li>
+              <li><a href="#">정책실명제</a></li>
+              <li><a href="#">알림정보</a></li>
+              <li><a href="#">통합자료실</a></li>
+              <li><a href="#">공공저작물</a></li>
+              <li><a href="#">공공데이터개방</a></li>
+              <li><a href="#">계약정보</a></li>
+              <li><a href="#">감사정보</a></li>
+              <li><a href="#" class="href-icon">통계정보</a></li>
             </ul>
             <ul>
-              <li>시정비전</li>
-              <li>시청안내</li>
-              <li>일반현황</li>
-              <li>대구의 상징</li>
-              <li>스토리인대구</li>
-              <li>역사</li>
-              <li>컬러풀뉴스룸</li>
-              <li>교류도시</li>
+              <li><a href="#">시정비전</a></li>
+              <li><a href="#">시청안내</a></li>
+              <li><a href="#">일반현황</a></li>
+              <li><a href="#">대구의 상징</a></li>
+              <li><a href="#">스토리인대구</a></li>
+              <li><a href="#">역사</a></li>
+              <li><a href="#">컬러풀뉴스룸</a></li>
+              <li><a href="#">교류도시</a></li>
             </ul>
             <ul>
-              <li>문화·관광·체육</li>
-              <li>교통</li>
-              <li>복지</li>
-              <li>여성·가족·교육</li>
-              <li>건강·보건·위생</li>
-              <li>산업·경제</li>
-              <li>환경</li>
-              <li>소방·안전</li>
-              <li>도시주택·건설</li>
-              <li>행정·재정·세정</li>
+              <li><a href="#">문화·관광·체육</a></li>
+              <li><a href="#">교통</a></li>
+              <li><a href="#">복지</a></li>
+              <li><a href="#">여성·가족·교육</a></li>
+              <li><a href="#">건강·보건·위생</a></li>
+              <li><a href="#">산업·경제</a></li>
+              <li><a href="#">환경</a></li>
+              <li><a href="#">소방·안전</a></li>
+              <li><a href="#">도시주택·건설</a></li>
+              <li><a href="#">행정·재정·세정</a></li>
             </ul>
           </div>
         </div>
+      </div>
+      <div class="wrap">
+        <div class="logo"><a href="#"></a></div>
+        <div class="gnb-wrap">
+          <ul id="gnb">
+            <li>민원·소통·참여</li>
+            <li>정보공개</li>
+            <li>대구소개</li>
+            <li>분야별정보</li>
+          </ul>
+        </div>
         <div class="util-wrap">
           <ul>
-            <li>
-              <div class="login">
+            <li class="notClickArea">
+              <div class="login notClickArea">
                 로그인
-                <div class="lst">
-                  <ul>
-                    <li><a href="#">로그인</a></li>
-                    <li><a href="#">회원가입</a></li>
+                <div class="lst notClickArea">
+                  <ul class="notClickArea">
+                    <li class="notClickArea"><a href="#" class="notClickArea">로그인</a></li>
+                    <li class="notClickArea"><a href="#" class="notClickArea">회원가입</a></li>
                   </ul>
                 </div>
               </div>
             </li>
-            <li>
-              <div class="language">
+            <li class="notClickArea">
+              <div class="language notClickArea">
                 LANGUAGE
-                <div class="lst">
-                  <ul>
-                    <li><a href="#">English</a></li>
-                    <li><a href="#">简体中文</a></li>
-                    <li><a href="#">繁體中文</a></li>
-                    <li><a href="#">日本語</a></li>
-                    <li><a href="#">Arabic</a></li>
+                <div class="lst notClickArea">
+                  <ul class="notClickArea">
+                    <li class="notClickArea"><a href="#" class="notClickArea">English</a></li>
+                    <li class="notClickArea"><a href="#" class="notClickArea">简体中文</a></li>
+                    <li class="notClickArea"><a href="#" class="notClickArea">繁體中文</a></li>
+                    <li class="notClickArea"><a href="#" class="notClickArea">日本語</a></li>
+                    <li class="notClickArea"><a href="#" class="notClickArea">Arabic</a></li>
                   </ul>
                 </div>
               </div>
@@ -690,7 +692,7 @@
                 <li><a href="#" class="href-icon">시험/취업</a></li>
                 <li><a href="#" class="href-icon">자치법규(조례·규칙)</a></li>
                 <li><a href="#" class="href-icon">민원서류발급</a></li>
-                <li><a href="#" class="href-icon">응급의료포털</a> / <a href="#" class="href-icon">복지로</a></li>
+                <li><a href="#" class="href-icon">응급의료포털</a>/<a href="#" class="href-icon">복지로</a></li>
               </ul>
             </div>
             <div class="buisness">
@@ -729,119 +731,125 @@
         </div>
       </div>
       <div class="content-area eighth">
-        <ul>
-          <li><a href="#" class="href-icon">자치경찰위원회</a></li>
-          <li><a href="#" class="href-icon">보이피싱주의</a></li>
-          <li><a href="#" class="href-icon">사이버참배</a></li>
-          <li><a href="#" class="href-icon">대구 청년정책</a></li>
-          <li><a href="#" class="href-icon">국가상징알아보기</a></li>
-        </ul>
+        <div class="wrap">
+          <ul>
+            <li><a href="#" class="href-icon">자치경찰위원회</a></li>
+            <li><a href="#" class="href-icon">보이피싱주의</a></li>
+            <li><a href="#" class="href-icon">사이버참배</a></li>
+            <li><a href="#" class="href-icon">대구 청년정책</a></li>
+            <li><a href="#" class="href-icon">국가상징알아보기</a></li>
+          </ul>
+        </div>
       </div>
       <div class="content-area nineth">
-        <ul>
-          <li>
-            직속기관바로가기
-            <div class="drag-box">
-              <ul>
-                <li><a href="#">공무원교육원</a></li>
-                <li><a href="#">보건환경연구원</a></li>
-                <li><a href="#">농업기술센터</a></li>
-                <li><a href="#">중부소방서</a></li>
-                <li><a href="#">동부소방서</a></li>
-                <li><a href="#">서부소방서</a></li>
-                <li><a href="#">북부소방서</a></li>
-                <li><a href="#">수성소방서</a></li>
-                <li><a href="#">달서소방서</a></li>
-                <li><a href="#">달성소방서</a></li>
-                <li><a href="#">강서소방서</a></li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            사업소 바로가기
-            <div class="drag-box">
-              <ul>
-                <li><a href="#">상수도사업본부</a></li>
-                <li><a href="#">건설본부</a></li>
-                <li><a href="#">도시철도건설본부</a></li>
-                <li><a href="#">서울본부</a></li>
-                <li><a href="#">시설안전관리사업소</a></li>
-                <li><a href="#">농수산물도매시장</a></li>
-                <li><a href="#">차량등록사업소</a></li>
-                <li><a href="#">종합복지회관</a></li>
-                <li><a href="#">여성회관</a></li>
-                <li><a href="#">동부여성문화회관</a></li>
-                <li><a href="#">문화예술회관</a></li>
-                <li><a href="#">대구미술관</a></li>
-                <li><a href="#">대구콘서트하우스</a></li>
-                <li><a href="#">체육시설관리사무소</a></li>
-                <li><a href="#">환경자원사업소</a></li>
-                <li><a href="#">도시공원관리사무소</a></li>
-                <li><a href="#">팔공산자연공원관리사무소</a></li>
-                <li><a href="#">수목원관리사무소</a></li>
-                <li><a href="#">달성습지관리사무소</a></li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            대구시 구·군 바로가기
-            <div class="drag-box">
-              <ul>
-                <li><a href="#">중구청</a></li>
-                <li><a href="#">동구청</a></li>
-                <li><a href="#">서구청</a></li>
-                <li><a href="#">남구청</a></li>
-                <li><a href="#">북구청</a></li>
-                <li><a href="#">수성구청</a></li>
-                <li><a href="#">달서구청</a></li>
-                <li><a href="#">달성군청</a></li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            관련기관사이트 바로가기
-            <div class="drag-box">
-              <ul>
-                <li><a href="#">정부/지자체 조직도</a></li>
-                <li><a href="#">대구도시철도공사</a></li>
-                <li><a href="#">대구도시공사</a></li>
-                <li><a href="#">대구시설공단</a></li>
-                <li><a href="#">대구환경공단</a></li>
-                <li><a href="#">달성군 시설관리공단</a></li>
-                <li><a href="#">시의회</a></li>
-                <li><a href="#">자치경찰위원회</a></li>
-                <li><a href="#">대구광역시사회서비스원</a></li>
-                <li><a href="#">기타관련사이트</a></li>
-              </ul>
-            </div>
-          </li>
-        </ul>
+        <div class="wrap">
+          <ul>
+            <li>
+              직속기관 바로가기
+              <div class="drag-box">
+                <ul>
+                  <li><a href="#">공무원교육원</a></li>
+                  <li><a href="#">보건환경연구원</a></li>
+                  <li><a href="#">농업기술센터</a></li>
+                  <li><a href="#">중부소방서</a></li>
+                  <li><a href="#">동부소방서</a></li>
+                  <li><a href="#">서부소방서</a></li>
+                  <li><a href="#">북부소방서</a></li>
+                  <li><a href="#">수성소방서</a></li>
+                  <li><a href="#">달서소방서</a></li>
+                  <li><a href="#">달성소방서</a></li>
+                  <li><a href="#">강서소방서</a></li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              사업소 바로가기
+              <div class="drag-box">
+                <ul>
+                  <li><a href="#">상수도사업본부</a></li>
+                  <li><a href="#">건설본부</a></li>
+                  <li><a href="#">도시철도건설본부</a></li>
+                  <li><a href="#">서울본부</a></li>
+                  <li><a href="#">시설안전관리사업소</a></li>
+                  <li><a href="#">농수산물도매시장</a></li>
+                  <li><a href="#">차량등록사업소</a></li>
+                  <li><a href="#">종합복지회관</a></li>
+                  <li><a href="#">여성회관</a></li>
+                  <li><a href="#">동부여성문화회관</a></li>
+                  <li><a href="#">문화예술회관</a></li>
+                  <li><a href="#">대구미술관</a></li>
+                  <li><a href="#">대구콘서트하우스</a></li>
+                  <li><a href="#">체육시설관리사무소</a></li>
+                  <li><a href="#">환경자원사업소</a></li>
+                  <li><a href="#">도시공원관리사무소</a></li>
+                  <li><a href="#">팔공산자연공원관리사무소</a></li>
+                  <li><a href="#">수목원관리사무소</a></li>
+                  <li><a href="#">달성습지관리사무소</a></li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              대구시 구·군 바로가기
+              <div class="drag-box">
+                <ul>
+                  <li><a href="#">중구청</a></li>
+                  <li><a href="#">동구청</a></li>
+                  <li><a href="#">서구청</a></li>
+                  <li><a href="#">남구청</a></li>
+                  <li><a href="#">북구청</a></li>
+                  <li><a href="#">수성구청</a></li>
+                  <li><a href="#">달서구청</a></li>
+                  <li><a href="#">달성군청</a></li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              관련기관사이트 바로가기
+              <div class="drag-box">
+                <ul>
+                  <li><a href="#">정부/지자체 조직도</a></li>
+                  <li><a href="#">대구도시철도공사</a></li>
+                  <li><a href="#">대구도시공사</a></li>
+                  <li><a href="#">대구시설공단</a></li>
+                  <li><a href="#">대구환경공단</a></li>
+                  <li><a href="#">달성군 시설관리공단</a></li>
+                  <li><a href="#">시의회</a></li>
+                  <li><a href="#">자치경찰위원회</a></li>
+                  <li><a href="#">대구광역시사회서비스원</a></li>
+                  <li><a href="#">기타관련사이트</a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </main>
     <footer id="footer">
-      <div class="footer-t">
-        <ul>
-          <li><a href="#">개인정보처리방침</a></li>
-          <li><a href="#">저작권정책</a></li>
-          <li><a href="#">행정서비스 헌장</a></li>
-          <li><a href="#">뷰어다운로드</a></li>
-          <li><a href="#">관련기관</a></li>
-          <li><a href="#">전화번호(FAX)안내</a></li>
-          <li><a href="#">공공앱소개</a></li>
-          <li><a href="#">배너모음</a></li>
-          <li><a href="#">XML</a></li>
-          <li><a href="#">찾아오시는 길</a></li>
-        </ul>
-      </div>
-      <div class="footer-b">
-        <div class="footer-logo"></div>
-        <div class="footer-text">
-          <p class="address"><span>(우 41911) 대구광역시 중구 공평로 88 /</span><span>별관: 대구광역시 북구 연암로 40 /</span><span>전화번호 : 053)120, 053)803-0114</span></p>
-          <p class="copy">&copy; DAEGU METROPOLITAN CITY ALL RIGHTS RESERVED.</p>
+      <div class="wrap">
+        <div class="footer-t">
+          <ul>
+            <li><a href="#"><strong>개인정보처리방침</strong></a></li>
+            <li><a href="#">저작권정책</a></li>
+            <li><a href="#">행정서비스 헌장</a></li>
+            <li><a href="#">뷰어다운로드</a></li>
+            <li><a href="#">관련기관</a></li>
+            <li><a href="#">전화번호(FAX)안내</a></li>
+            <li><a href="#">공공앱소개</a></li>
+            <li><a href="#">배너모음</a></li>
+            <li><a href="#">XML</a></li>
+            <li><a href="#">찾아오시는 길</a></li>
+          </ul>
         </div>
-        <div class="footer-mark">
-          <div class="callcenter"></div>
-          <a href=""><div class="wa"></div></a>
+        <div class="footer-b">
+          <div class="footer-logo"></div>
+          <div class="footer-text">
+            <p class="address"><span>(우 41911) 대구광역시 중구 공평로 88 /</span><span>별관: 대구광역시 북구 연암로 40 /</span><span>전화번호 : 053)120, 053)803-0114</span></p>
+            <p class="copy">&copy; DAEGU METROPOLITAN CITY ALL RIGHTS RESERVED.</p>
+          </div>
+          <div class="footer-mark">
+            <div class="callcenter"></div>
+            <a href=""><img src="../img/img_wa.png" alt="wa"></a>
+          </div>
         </div>
       </div>
     </footer>
