--- a/index.html
+++ b/index.html
@@ -148,12 +148,6 @@
                   <span class="slide-content">국내 유일의 글로벌 뮤지컬 축제 DIMF가 3년만에 글로벌 공연 초청과 함께 오는 6월 24일 코오롱 야외음악당에서 야외 개막식과 초대형 뮤지컬 갈라 콘서트를 시작으로 개최됩니다</span>
                 </div>
                 <div class="ad-img"></div>
-                <div class="btn-group">
-                  <div class="btn-prev"></div>
-                  <div class="btn-count"><span>1</span><span>/3</span></div>
-                  <div class="btn-next"></div>
-                  <div class="btn-stop"><span></span></div>
-                </div>
               </a>
             </div>
             <div class="slide">
@@ -173,6 +167,12 @@
                 </div>
                 <div class="ad-img"></div>
               </a>
+            </div>
+            <div class="btn-group">
+              <div class="btn-prev"></div>
+              <div class="btn-count"><span>1</span><span>/3</span></div>
+              <div class="btn-next"></div>
+              <div class="btn-stop active"><span></span></div>
             </div>
           </div>
           <div class="col2">
@@ -194,9 +194,11 @@
                 </div>
               </div>
               <div class="wt-slide-area">
-                <a href="#">초미세먼지<b>13</b>㎍/㎥ <span>좋음</span></a>
-                <a href="#">미세먼지<b>26</b>㎍/㎥ <span>좋음</span></a>
-                <a href="#">오존<b>0.050</b>ppm <span>보통</span></a>
+                <div class="wt-slide-wrapper">
+                  <a href="#">초미세먼지<b>13</b>㎍/㎥ <span>좋음</span></a>
+                  <a href="#">미세먼지<b>26</b>㎍/㎥ <span>좋음</span></a>
+                  <a href="#">오존<b>0.050</b>ppm <span>보통</span></a>
+                </div>
               </div>
             </div>
             <div class="mayor">
@@ -463,8 +465,8 @@
           </div>
           <div class="col2">
             <h2>알림존</h2>
-            <div class="swiper">
-              <div class="swiper-container">
+            <div class="swiper six">
+              <div class="swiper-wrapper six">
                 <div class="swiper-slide"></div>
                 <div class="swiper-slide"></div>
                 <div class="swiper-slide"></div>
@@ -483,6 +485,12 @@
                 <div class="swiper-slide"></div>
                 <div class="swiper-slide"></div>
               </div>
+            </div>
+            <div class="btn-group">
+              <div class="btn-prev six"></div>
+              <div class="btn-count six"><span>1</span><span>/3</span></div>
+              <div class="btn-next six"></div>
+              <div class="btn-stop six active"><span></span></div>
             </div>
           </div>
         </div>
@@ -848,7 +856,7 @@
           </div>
           <div class="footer-mark">
             <div class="callcenter"></div>
-            <a href=""><img src="../img/img_wa.png" alt="wa"></a>
+            <a href=""><img src="./img/img_wa.png" alt="wa"></a>
           </div>
         </div>
       </div>
