--- a/index.html
+++ b/index.html
@@ -487,10 +487,10 @@
               </div>
             </div>
             <div class="btn-group">
-              <div class="btn-prev six"></div>
-              <div class="btn-count six"><span>1</span><span>/3</span></div>
-              <div class="btn-next six"></div>
+              <div id="six-prev" class="btn-prev btn six"></div>
+              <div class="btn-count btn six"><span>1</span><span>/17</span></div>
               <div class="btn-stop six active"><span></span></div>
+              <div id="six-next" class="btn-next btn six"></div>
             </div>
           </div>
         </div>
